# lt-test

./: README.md
client/: CMakeLists.txt  client.pro  mainwindow.cpp  mainwindow.h
qml/: CMakeLists.txt  client.qml  main.cpp  qml.qrc
qml-client/: CMakeLists.txt  Model.cpp  Model.h  client.qml  main.cpp  qml.qrc
server/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  myserver.cpp  myserver.h  reporttools.cpp  reporttools.h  server.pro
task/: Задания программистам Л-Телеком
